PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-code-correct-Test-4_16-275_erreur_acces_tableau/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:19: error: invalid initializer
    2 |     int a=8, b[4]=5;
      |                   ^

return code: 1
